# tux_match

./: .gitignore  CMakeLists.txt  README.md  tux_match.pro
.github/workflows/: default.yml
resources/: app_resources.qrc  pieces.xcf  title.xcf
source/: CMakeLists.txt  main.cpp
source/game_logic/: CMakeLists.txt  coordinates.hpp  game_board.cpp  game_board.hpp  game_logic.cpp  game_logic.hpp
source/graphics_engine/: CMakeLists.txt  board_renderer.cpp  board_renderer.hpp  graphics_engine.cpp  graphics_engine.hpp
source/graphics_engine/shaders/: GL_shaders.qrc  background_fs.glsl  background_vs.glsl  gamepiece_fs.glsl  gamepiece_vs.glsl  title_fs.glsl  title_vs.glsl
src/: CMakeLists.txt
src/graphics_engine/: CMakeLists.txt  graphics_engine.cpp
